[gd_scene load_steps=25 format=4 uid="uid://c2fyj6r1bx0t8"]

[ext_resource type="Texture2D" uid="uid://btdg42rwhitjt" path="res://World/walls.png" id="1_12uwh"]
[ext_resource type="Script" path="res://Levels/level_10.gd" id="1_s7iha"]
[ext_resource type="PackedScene" uid="uid://gguvth8dwy0r" path="res://Player/skeleton.tscn" id="3_hht4m"]
[ext_resource type="Texture2D" uid="uid://cdedorva34wu7" path="res://Effects/Light.png" id="4_a7n1n"]
[ext_resource type="PackedScene" uid="uid://b46nsbrxd3oe" path="res://game_over.tscn" id="5_2i0xk"]
[ext_resource type="PackedScene" uid="uid://ckuea2t7r0isv" path="res://UI/health_ui.tscn" id="5_6etbj"]
[ext_resource type="PackedScene" uid="uid://u0o05i8aypf6" path="res://pause_menu.tscn" id="6_j14sg"]
[ext_resource type="PackedScene" uid="uid://bksyev3f8hbyy" path="res://Enemies/ghost_boss.tscn" id="9_dqpo4"]
[ext_resource type="Texture2D" uid="uid://cud1i1wdnioib" path="res://World/newLevel.png" id="10_6dxtc"]
[ext_resource type="PackedScene" uid="uid://w7sk4aujm0o6" path="res://shooter.tscn" id="10_h0spi"]
[ext_resource type="PackedScene" uid="uid://cstacl4uln26" path="res://World/chest.tscn" id="11_cwv52"]
[ext_resource type="Script" path="res://World/chest2.gd" id="12_k3aq3"]
[ext_resource type="Script" path="res://World/chest5.gd" id="13_jru6a"]
[ext_resource type="Texture2D" uid="uid://dpf10hpg80c58" path="res://Player/BigGhostGun.png" id="14_o2uug"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_gy57s"]
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_w7a6g"]
texture = ExtResource("1_12uwh")
0:0/0 = 0
0:0/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_gy57s")
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_ejhfa"]
occlusion_layer_0/light_mask = 1
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_w7a6g")

[sub_resource type="AtlasTexture" id="AtlasTexture_45wyb"]
atlas = ExtResource("10_6dxtc")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6k7pc"]
atlas = ExtResource("10_6dxtc")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qf74c"]
atlas = ExtResource("10_6dxtc")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4h2p"]
atlas = ExtResource("10_6dxtc")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2lec"]
atlas = ExtResource("10_6dxtc")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ooixc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_45wyb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6k7pc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qf74c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4h2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2lec")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0vqh5"]
radius = 5.0
height = 22.0

[node name="Level10" type="Node2D"]
script = ExtResource("1_s7iha")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -2
offset_left = -12.0
offset_right = 351.0
offset_bottom = 279.0
color = Color(0.282763, 0.19515, 0.133943, 1)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD//wAAAAAAAAAAAAD//wEAAAAAAAAAAAD//wIAAAAAAAAAAAD//wMAAAAAAAAAAAD//wQAAAAAAAAAAAD//wUAAAAAAAAAAAD//wYAAAAAAAAAAAD//wcAAAAAAAAAAAD//wgAAAAAAAAAAAD//wkAAAAAAAAAAAD//woAAAAAAAAAAAAVAAoAAAAAAAAAAAAVAAkAAAAAAAAAAAAVAAgAAAAAAAAAAAAVAAUAAAAAAAAAAAAVAAcAAAAAAAAAAAAVAAYAAAAAAAAAAAAVAAQAAAAAAAAAAAAVAAMAAAAAAAAAAAAVAAIAAAAAAAAAAAAVAAEAAAAAAAAAAAAVAAAAAAAAAAAAAAAVAP//AAAAAAAAAAAUAP//AAAAAAAAAAATAP//AAAAAAAAAAASAP//AAAAAAAAAAARAP//AAAAAAAAAAAQAP//AAAAAAAAAAD/////AAAAAAAAAAAAAP//AAAAAAAAAAABAP//AAAAAAAAAAACAP//AAAAAAAAAAADAP//AAAAAAAAAAAEAP//AAAAAAAAAAAFAP//AAAAAAAAAAAGAP//AAAAAAAAAAAHAP//AAAAAAAAAAAIAP//AAAAAAAAAAAJAP//AAAAAAAAAAAPAP//AAAAAAAAAAAOAP//AAAAAAAAAAANAP//AAAAAAAAAAAMAP//AAAAAAAAAAALAP//AAAAAAAAAAAKAP//AAAAAAAAAAD//wsAAAAAAAAAAAAVAAsAAAAAAAAAAAD//wwAAAAAAAAAAAAVAAwAAAAAAAAAAAD//w0AAAAAAAAAAAD//w4AAAAAAAAAAAD//w8AAAAAAAAAAAD//xAAAAAAAAAAAAAAABAAAAAAAAAAAAABABAAAAAAAAAAAAACABAAAAAAAAAAAAADABAAAAAAAAAAAAAEABAAAAAAAAAAAAAFABAAAAAAAAAAAAAGABAAAAAAAAAAAAAHABAAAAAAAAAAAAAIABAAAAAAAAAAAAAJABAAAAAAAAAAAAAKABAAAAAAAAAAAAALABAAAAAAAAAAAAAMABAAAAAAAAAAAAANABAAAAAAAAAAAAAOABAAAAAAAAAAAAAPABAAAAAAAAAAAAAQABAAAAAAAAAAAAARABAAAAAAAAAAAAASABAAAAAAAAAAAAATABAAAAAAAAAAAAAUABAAAAAAAAAAAAAVABAAAAAAAAAAAAAVAA8AAAAAAAAAAAAVAA4AAAAAAAAAAAAVAA0AAAAAAAAAAAA=")
tile_set = SubResource("TileSet_ejhfa")

[node name="Camera2D" type="Camera2D" parent="TileMapLayer"]
position = Vector2(33, 20)
limit_left = -5
limit_top = -8
limit_right = 350
limit_bottom = 270
limit_smoothed = true

[node name="Skeleton" parent="." instance=ExtResource("3_hht4m")]
position = Vector2(33, 20)

[node name="PointLight2D" type="PointLight2D" parent="Skeleton"]
position = Vector2(-1, 3.5)
scale = Vector2(1, 1.01172)
color = Color(1, 0.806636, 0.611801, 1)
energy = 0.46
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 0.6
texture = ExtResource("4_a7n1n")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Skeleton"]
remote_path = NodePath("../../TileMapLayer/Camera2D")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthUI" parent="CanvasLayer" instance=ExtResource("5_6etbj")]

[node name="GameOver" parent="." instance=ExtResource("5_2i0xk")]
visible = false

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="CanvasLayer2" instance=ExtResource("6_j14sg")]

[node name="GhostBoss" parent="." instance=ExtResource("9_dqpo4")]
position = Vector2(164, 132)

[node name="Shooter" parent="." instance=ExtResource("10_h0spi")]
position = Vector2(164, 131)

[node name="ShooterImage" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 0.0922561, 0.688201, 1)
position = Vector2(164, 131)
sprite_frames = SubResource("SpriteFrames_ooixc")
autoplay = "default"

[node name="ShooterStarter" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 6.0
one_shot = true

[node name="HealthChests" type="Node2D" parent="."]

[node name="Chest" parent="HealthChests" instance=ExtResource("11_cwv52")]
position = Vector2(94, 249)
script = ExtResource("12_k3aq3")

[node name="Path2D" parent="HealthChests/Chest" index="4"]
position = Vector2(0, -16)
scale = Vector2(0.892857, 0.321429)

[node name="Chest2" parent="HealthChests" instance=ExtResource("11_cwv52")]
position = Vector2(165, 249)
script = ExtResource("12_k3aq3")

[node name="Path2D" parent="HealthChests/Chest2" index="4"]
position = Vector2(0, -16)
scale = Vector2(0.892857, 0.321429)

[node name="Chest3" parent="HealthChests" instance=ExtResource("11_cwv52")]
position = Vector2(237, 249)
script = ExtResource("12_k3aq3")

[node name="Path2D" parent="HealthChests/Chest3" index="4"]
position = Vector2(0, -16)
scale = Vector2(0.892857, 0.321429)

[node name="Chest4" parent="HealthChests" instance=ExtResource("11_cwv52")]
position = Vector2(237, 6)
script = ExtResource("12_k3aq3")

[node name="Path2D" parent="HealthChests/Chest4" index="4"]
position = Vector2(0, 17)
scale = Vector2(0.892857, 0.321429)

[node name="Chest5" parent="HealthChests" instance=ExtResource("11_cwv52")]
position = Vector2(167, 6)
script = ExtResource("12_k3aq3")

[node name="Path2D" parent="HealthChests/Chest5" index="4"]
position = Vector2(0, 17)
scale = Vector2(0.892857, 0.321429)

[node name="Chest6" parent="HealthChests" instance=ExtResource("11_cwv52")]
position = Vector2(93, 6)
script = ExtResource("12_k3aq3")

[node name="Path2D" parent="HealthChests/Chest6" index="4"]
position = Vector2(0, 17)
scale = Vector2(0.892857, 0.321429)

[node name="Chest" parent="." instance=ExtResource("11_cwv52")]
position = Vector2(326, 129)
script = ExtResource("13_jru6a")

[node name="ChestZone" parent="Chest" index="1"]
visible = false

[node name="Sprite2D" parent="Chest" index="2"]
modulate = Color(0.723249, 0.273804, 0.785124, 1)

[node name="CollisionShape2D" parent="Chest" index="3"]
visible = false

[node name="BigGhostGun" type="Sprite2D" parent="Chest"]
position = Vector2(-1, 12)
texture = ExtResource("14_o2uug")

[node name="item_zone" type="Area2D" parent="Chest/BigGhostGun"]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chest/BigGhostGun/item_zone"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_0vqh5")
debug_color = Color(0.7, 0, 0.545753, 0.42)

[connection signal="health_depleted" from="Skeleton" to="." method="_on_skeleton_health_depleted"]
[connection signal="boss_health_depleted" from="GhostBoss" to="." method="_on_ghost_boss_boss_health_depleted"]
[connection signal="timeout" from="ShooterStarter" to="." method="_on_shooter_starter_timeout"]
[connection signal="body_entered" from="HealthChests/Chest/ChestZone" to="HealthChests/Chest" method="_on_chest_zone_body_entered"]
[connection signal="body_exited" from="HealthChests/Chest/ChestZone" to="HealthChests/Chest" method="_on_chest_zone_body_exited"]
[connection signal="body_entered" from="HealthChests/Chest2/ChestZone" to="HealthChests/Chest2" method="_on_chest_zone_body_entered"]
[connection signal="body_exited" from="HealthChests/Chest2/ChestZone" to="HealthChests/Chest2" method="_on_chest_zone_body_exited"]
[connection signal="body_entered" from="HealthChests/Chest3/ChestZone" to="HealthChests/Chest3" method="_on_chest_zone_body_entered"]
[connection signal="body_exited" from="HealthChests/Chest3/ChestZone" to="HealthChests/Chest3" method="_on_chest_zone_body_exited"]
[connection signal="body_entered" from="HealthChests/Chest4/ChestZone" to="HealthChests/Chest4" method="_on_chest_zone_body_entered"]
[connection signal="body_exited" from="HealthChests/Chest4/ChestZone" to="HealthChests/Chest4" method="_on_chest_zone_body_exited"]
[connection signal="body_entered" from="HealthChests/Chest5/ChestZone" to="HealthChests/Chest5" method="_on_chest_zone_body_entered"]
[connection signal="body_exited" from="HealthChests/Chest5/ChestZone" to="HealthChests/Chest5" method="_on_chest_zone_body_exited"]
[connection signal="body_entered" from="HealthChests/Chest6/ChestZone" to="HealthChests/Chest6" method="_on_chest_zone_body_entered"]
[connection signal="body_exited" from="HealthChests/Chest6/ChestZone" to="HealthChests/Chest6" method="_on_chest_zone_body_exited"]
[connection signal="boss_ready" from="Chest" to="." method="_on_chest_boss_ready"]
[connection signal="body_entered" from="Chest/ChestZone" to="Chest" method="_on_chest_zone_body_entered"]
[connection signal="body_exited" from="Chest/ChestZone" to="Chest" method="_on_chest_zone_body_exited"]
[connection signal="body_entered" from="Chest/BigGhostGun/item_zone" to="Chest" method="_on_item_zone_body_entered"]

[editable path="HealthChests/Chest"]
[editable path="HealthChests/Chest2"]
[editable path="HealthChests/Chest3"]
[editable path="HealthChests/Chest4"]
[editable path="HealthChests/Chest5"]
[editable path="HealthChests/Chest6"]
[editable path="Chest"]
